load("@aspect_rules_js//js:defs.bzl", "js_library")
load(
    "bazel/files.bzl",
    "MLN_MACOS_PRIVATE_HEADERS",
    "MLN_MACOS_PUBLIC_HEADERS",
    "MLN_MACOS_PUBLIC_OBJCPP_METAL_SOURCE",
    "MLN_MACOS_PUBLIC_OBJCPP_OPENGL_SOURCE",
    "MLN_MACOS_PUBLIC_OBJCPP_SOURCE",
    "MLN_MACOS_PUBLIC_OBJC_SOURCE",
)

filegroup(
    name = "macos_private_hdrs",
    srcs = MLN_MACOS_PRIVATE_HEADERS,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "macos_public_hdrs",
    srcs = MLN_MACOS_PUBLIC_HEADERS,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "macos_objcpp_srcs",
    srcs = MLN_MACOS_PUBLIC_OBJCPP_SOURCE + select({
        "//:metal_renderer": MLN_MACOS_PUBLIC_OBJCPP_METAL_SOURCE,
        "//conditions:default": MLN_MACOS_PUBLIC_OBJCPP_OPENGL_SOURCE,
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "macos_objc_srcs",
    srcs = MLN_MACOS_PUBLIC_OBJC_SOURCE,
    visibility = ["//visibility:public"],
)

exports_files(
    MLN_MACOS_PRIVATE_HEADERS +
    MLN_MACOS_PUBLIC_HEADERS +
    MLN_MACOS_PUBLIC_OBJCPP_SOURCE +
    MLN_MACOS_PUBLIC_OBJCPP_METAL_SOURCE +
    MLN_MACOS_PUBLIC_OBJC_SOURCE,
)

js_library(
    name = "symbols-to-check",
    srcs = [
        ":macos_objc_srcs",
        ":macos_objcpp_srcs",
        ":macos_private_hdrs",
        ":macos_public_hdrs",
    ],
    visibility = ["//platform:__pkg__"],
)
