[package]
name = "maplibre-native-autocxx"
version = "0.1.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>", "MapLibre contributors"]
description = "MapLibre Native Rust library"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maplibre/maplibre-native"

[dependencies]
cxx = "1"
autocxx = "0.27"

[build-dependencies]
autocxx-build = "0.27"
miette = { version = "5", features = ["fancy"] }
